--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,32 @@ body {
   font-family: "Fira Sans", sans-serif;
 }
 
+main {
+  padding: 30px 0;
+}
+
+.city {
+  margin: 0;
+  font-size: 38px;
+  line-height: 48px;
+}
+
+.weather-app-data {
+  display: flex;
+  justify-content: space-between;
+}
+
+.weather-details {
+  font-size: 16px;
+  line-height: 24px;
+  color: rgba(39, 33, 66, 0.4);
+  font-weight: 500;
+}
+
+.weather-details strong {
+  color: #f65282;
+}
+
 .app {
   background-color: #fff;
   max-width: 600px;
@@ -10,4 +36,60 @@ body {
   padding: 30px;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   border-radius: 15px;
+}
+
+header {
+  border-bottom: 1px solid #f9f7fe;
+  padding: 0 0 30px 0;
+}
+
+.search-form-input {
+  background-color: #f9f7fe;
+  border: none;
+  border-radius: 6px;
+  width: 80%;
+  font-size: 16px;
+  padding: 15px 20px;
+}
+
+.search-form-btn {
+  background-color: #885df1;
+  padding: 15px 30px;
+  border: none;
+  border-radius: 6px;
+  color: #fff;
+  margin-left: 5px;
+  font-size: 16px;
+}
+
+.weather-temp-container {
+  display: flex;
+}
+
+.weather-icon {
+  font-size: 44px;
+  margin-top: 22px;
+}
+
+.temperature {
+  font-size: 88px;
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+.weather-unit {
+  margin-top: 16px;
+  font-size: 28px;
+}
+
+a {
+  color: #885df1;
+}
+
+footer {
+  border-top: 1px solid #f9f7fe;
+  padding: 30px 0 0 0;
+  font-size: 12px;
+  color: rgba(0, 0, 0, 0.6);
+  text-align: center;
 }
