--- a/src/styles.css
+++ b/src/styles.css
@@ -43,6 +43,11 @@ header {
   padding: 0 0 30px 0;
 }
 
+.search-form {
+  display: flex;
+  justify-content: space-between;
+}
+
 .search-form-input {
   background-color: #f9f7fe;
   border: none;
@@ -78,7 +83,7 @@ header {
 }
 
 .weather-unit {
-  margin-top: 16px;
+  margin-top: 20px;
   font-size: 28px;
 }
 
