--- a/src/styles.css
+++ b/src/styles.css
@@ -72,18 +72,19 @@ header {
 }
 
 .weather-icon {
-  font-size: 44px;
-  margin-top: 22px;
+  width: 88px;
+  height: 88px;
 }
 
 .temperature {
   font-size: 88px;
   font-weight: bold;
   margin-left: 10px;
+  line-height: 88px;
 }
 
 .weather-unit {
-  margin-top: 20px;
+  margin-top: 6px;
   font-size: 28px;
 }
 
