added forecast html

--- a/src/styles.css
+++ b/src/styles.css
@@ -88,6 +88,41 @@ header {
   font-size: 28px;
 }
 
+.weather-forecast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+
+.weather-forecast-date {
+  text-align: center;
+  color: rgba(39, 33, 66, 0.4);
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 10px;
+}
+
+.weather-forecast-icon {
+  font-size: 38px;
+  text-align: center;
+}
+
+.weather-forecast-temps {
+  color: #7e78f6;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.weather-forecast-temp {
+  padding: 0 10px;
+}
+
+.bold {
+  font-weight: bold;
+}
+
 a {
   color: #78cff6;
 }
