--- a/src/styles.css
+++ b/src/styles.css
@@ -136,3 +136,37 @@ footer {
   color: rgba(0, 0, 0, 0.6);
   text-align: center;
 }
+
+/* Mobile Screen */
+@media only screen and (max-width: 600px) {
+  .weather-app-data {
+    display: flex;
+    flex-direction: column;
+  }
+  .city,
+  .weather-details {
+    text-align: center;
+  }
+  .weather-forecast {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .weather-temp-container {
+    margin: 0 auto;
+    display: flex;
+  }
+
+  .weather-forecast-day {
+    border-bottom: 1px dashed #78cff6;
+    padding: 10px 0px;
+  }
+
+  .weather-forecast-day:last-child {
+    border-bottom: none;
+  }
+
+  .weather-forecast-day:first-child {
+    border-top: 1px dashed #78cff6;
+  }
+}
